--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -53,7 +53,32 @@
         
     </header>
     <!-- aside -->
-    <aside class="sidebar">hola</aside>
+    <aside class="sidebar">
+        <div class="sidebar-items">
+            <a href="#" class="sidebar-item"><i class="ri-home-line"></i><span>Home</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-compass-3-line"></i><span>explore</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-wireless-charging-line"></i><span>short</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-rss-line"></i><span>suscripciones</span></a>
+            <a href="#"></a>
+            <hr>
+            <a href="#" class="sidebar-item"><i class="ri-links-line"></i><span>Library</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-history-line"></i><span>History</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-video-line"></i><span>Your videos</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-time-line"></i><span>Watch videos</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-play-list-2-line"></i><span>All videos</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-arrow-down-line"></i><span>Show more</span></a>
+            <hr>
+            <h4>more from YouTube</h4>
+            <a href="#" class="sidebar-item"><i class="ri-keyboard-box-line"></i><span>Gaming</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-live-line"></i></i><span>Live</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-award-line"></i><span>Sports</span></a>
+            <hr>
+            <a href="#" class="sidebar-item"><i class="ri-settings-5-line"></i></i><span>Setting</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-flag-line"></i></i><span>Report history</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-question-line"></i><span>Help</span></a>
+            <a href="#" class="sidebar-item"><i class="ri-feedback-line"></i></i><span>Send Feedback</span></a>
+        </div>
+    </aside>
     <!-- main -->
     <main class="content"></main>
 </body>
