--- a/index.html
+++ b/index.html
@@ -80,6 +80,33 @@
         </div>
     </aside>
     <!-- main -->
-    <main class="content"></main>
+    <main class="content">
+        <div class="chips-wapper">
+            <div class="chips"><p>css</p>
+            </div>
+            <div class="chips"><p>responsive desing</p>
+            </div>
+            <div class="chips"><p>desing</p>
+            </div>
+            <div class="chips"><p>javascrip</p>
+            </div>
+            <div class="chips"><p>reat</p>
+            </div>
+            <div class="chips"><p>ui/ax</p>
+            </div>
+            <div class="chips"><p>java</p>
+            </div>
+            <div class="chips"><p>php</p>
+            </div>
+            <div class="chips"><p>node js</p>
+            </div>
+            <div class="chips"><p>mysql</p>
+            </div>
+            <div class="chips"><p>Oracle</p>
+            </div>
+            <div class="chips"><p>UML</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
