--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube</title>
     <link rel="stylesheet" href="css/styles.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
@@ -107,6 +107,407 @@
             <div class="chips"><p>UML</p>
             </div>
         </div>
+        <div class="video-container">
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-1.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-2.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-3.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-4.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-5.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chane6-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-7.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-8.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-9.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-10.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-11.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-12.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-13.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-14.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-15.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-16.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-17.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-18.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-19.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-20.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-21.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="video-container-cover">
+                <div class="video-content">
+                <a href="#" class="video-box">
+                    <img src="/img/img-22.jpg" alt="img.1">
+                </a>
+                <div class="video-detail">
+                    <div class="chanel-logo">
+                        <img src="/img/john.jpg" alt="logo">
+                    </div>
+                    <div class="detail">
+                        <h3 class="title">clon YouTube flexbox and grid css</h3>
+                        <div class="chanel-nname">victor t</div>
+                        <div class="views-upload"></div>
+                        <div class="views">28k views</div>
+                        <div class="upload">6 months ago </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>      
     </main>
 </body>
 </html>
