--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chane6-nname">victor t</div>
+                        <div class="chane6-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -290,7 +290,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -309,7 +309,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -328,7 +328,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -347,7 +347,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -366,7 +366,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -385,7 +385,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -404,7 +404,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -423,7 +423,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -442,7 +442,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -461,7 +461,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -480,7 +480,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
@@ -499,7 +499,7 @@
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
-                        <div class="chanel-nname">victor t</div>
+                        <div class="chanel-name">victor t</div>
                         <div class="views-upload"></div>
                         <div class="views">28k views</div>
                         <div class="upload">6 months ago </div>
