--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-1.jpg" alt="img.1">
+                    <img src="img/img-1.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -130,11 +130,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-2.jpg" alt="img.1">
+                    <img src="img/img-2.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -149,11 +149,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-3.jpg" alt="img.1">
+                    <img src="img/img-3.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -168,11 +168,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-4.jpg" alt="img.1">
+                    <img src="img/img-4.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -187,11 +187,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-5.jpg" alt="img.1">
+                    <img src="img/img-5.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -206,11 +206,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-7.jpg" alt="img.1">
+                    <img src="img/img-7.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -225,11 +225,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-8.jpg" alt="img.1">
+                    <img src="img/img-8.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -244,11 +244,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-9.jpg" alt="img.1">
+                    <img src="img/img-9.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -263,11 +263,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-10.jpg" alt="img.1">
+                    <img src="img/img-10.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -282,11 +282,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-11.jpg" alt="img.1">
+                    <img src="img/img-11.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -301,11 +301,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-12.jpg" alt="img.1">
+                    <img src="img/img-12.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -320,11 +320,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-13.jpg" alt="img.1">
+                    <img src="img/img-13.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -339,11 +339,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-14.jpg" alt="img.1">
+                    <img src="img/img-14.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -358,11 +358,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-15.jpg" alt="img.1">
+                    <img src="img/img-15.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -377,11 +377,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-16.jpg" alt="img.1">
+                    <img src="img/img-16.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -396,11 +396,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-17.jpg" alt="img.1">
+                    <img src="img/img-17.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -415,11 +415,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-18.jpg" alt="img.1">
+                    <img src="img/img-18.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -434,11 +434,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-19.jpg" alt="img.1">
+                    <img src="img/img-19.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -453,11 +453,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-20.jpg" alt="img.1">
+                    <img src="img/img-20.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -472,11 +472,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-21.jpg" alt="img.1">
+                    <img src="img/img-21.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
@@ -491,11 +491,11 @@
             <div class="video-container-cover">
                 <div class="video-content">
                 <a href="#" class="video-box">
-                    <img src="/img/img-22.jpg" alt="img.1">
+                    <img src="img/img-22.jpg" alt="img.1">
                 </a>
                 <div class="video-detail">
                     <div class="chanel-logo">
-                        <img src="/img/john.jpg" alt="logo">
+                        <img src="img/john.jpg" alt="logo">
                     </div>
                     <div class="detail">
                         <h3 class="title">clon YouTube flexbox and grid css</h3>
